// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: parse Element self closing multiple tag 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "directives": Array [
        Object {
          "arg": Object {
            "content": "class",
            "isStatic": true,
            "type": "SIMPLE_EXPRESSION",
          },
          "exp": Object {
            "content": "{ some: condition }",
            "isStatic": false,
            "type": "SIMPLE_EXPRESSION",
          },
          "name": "bind",
          "type": "DIRECTIVE",
        },
      ],
      "isSelfClosing": true,
      "props": Array [],
      "tag": "div",
      "tagType": "ELEMENT",
      "type": "ELEMENT",
    },
    Object {
      "children": Array [],
      "directives": Array [
        Object {
          "arg": Object {
            "content": "style",
            "isStatic": true,
            "type": "SIMPLE_EXPRESSION",
          },
          "exp": Object {
            "content": "{ color: 'red' }",
            "isStatic": false,
            "type": "SIMPLE_EXPRESSION",
          },
          "name": "bind",
          "type": "DIRECTIVE",
        },
      ],
      "isSelfClosing": true,
      "props": Array [],
      "tag": "p",
      "tagType": "ELEMENT",
      "type": "ELEMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`compiler: parse Element valid html 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "directives": Array [
            Object {
              "arg": Object {
                "content": "style",
                "isStatic": true,
                "type": "SIMPLE_EXPRESSION",
              },
              "exp": Object {
                "content": "{ color: 'red' }",
                "isStatic": false,
                "type": "SIMPLE_EXPRESSION",
              },
              "name": "bind",
              "type": "DIRECTIVE",
            },
          ],
          "isSelfClosing": true,
          "props": Array [],
          "tag": "p",
          "tagType": "ELEMENT",
          "type": "ELEMENT",
        },
      ],
      "directives": Array [
        Object {
          "arg": Object {
            "content": "class",
            "isStatic": true,
            "type": "SIMPLE_EXPRESSION",
          },
          "exp": Object {
            "content": "{ some: condition }",
            "isStatic": false,
            "type": "SIMPLE_EXPRESSION",
          },
          "name": "bind",
          "type": "DIRECTIVE",
        },
      ],
      "isSelfClosing": false,
      "props": Array [],
      "tag": "div",
      "tagType": "ELEMENT",
      "type": "ELEMENT",
    },
  ],
  "type": "ROOT",
}
`;
